--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,14 @@
   cursor: pointer;
 }
 
+
+.popup__button_inactive {
+  color:  rgba(0, 0, 0, 0.20);
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.20);;
+}
+
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
