--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,6 +10,22 @@
   margin-bottom: 10px;
 }
 
+.form__input_type_error {
+  border-bottom-color: #FF0000;
+}
+
+.form__input-error {
+  opacity: 0;
+  position: absolute;
+  display: block;
+  color: #FF0000;
+  font-size: 12px;
+}
+
+.form__input-error_active {  
+  opacity: 1;
+}
+
 .popup__input:last-of-type {
   margin-bottom: 0;
 }
