--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,6 @@
 .profile__image {
+  position: relative;
+  z-index: 0;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -8,6 +10,42 @@
   background-position: center;
   margin: 0 29px 0 0;
   cursor: pointer;
+}
+
+.overlay {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  background-color: rgb(0 0 0 / .8);
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
+}
+
+.icon {
+  position: absolute;
+  z-index: 2;
+  width: 26px;
+  height: 26px;
+  background: transparent url('../../../images/edit-icon.svg') center no-repeat;
+  background-size: 26px 26px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;  
+  top: 47px;
+  left: 47px;
+}
+
+.profile__image:hover .overlay{
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
